KelasTerbuka : Halaman template didalam Apps

--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -8,11 +8,11 @@
 </head>
 <body>
     <h1>Baca Blog Kami..!</h1>
-    <p>Ini adalah halaman Blog dari Django apps Blog</p>
+    <p>Halaman Blog dipindahkan ke folder Blog</p>
     <p>Ini halaman yang sudah saya buat</p>
     <ol>
         <li>Halaman <a href="/">Home</a></li>
-        <li>Halaman <a href="/about/">About</a></li>
+        <li>Halaman <a href="/blog/">Blog</a></li>
     </ol>
 </body>
 </html>
