--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
     <p>Halaman web ini dibuat dengan menggunakan Framework Django</p>
     <p>Ini halaman yang sudah saya buat</p>
     <ol>
-        <li>Halaman <a href="/about/">About</a></li>
+        <li>Halaman <a href="/">Home</a></li>
         <li>Halaman <a href="/blog/">Blog</a></li>
     </ol>
     <p>Yang mau belajar tutorial pemrograman python kunjungi link dibawah ini</p>
