KelasTerbuka : Membuat Template Variable

--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -4,15 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Halaman Blog | Kelas Terbuka</title>
+    <title>{{judul}} | Kelas Terbuka</title>
 </head>
 <body>
     <h1>Baca Blog Kami..!</h1>
-    <p>Halaman Blog dipindahkan ke folder Blog</p>
+    <p>Halaman Blog dipindahkan ke folder Blog oleh Mr. {{mentor}}</p>
     <p>Ini halaman yang sudah saya buat</p>
     <ol>
         <li>Halaman <a href="/">Home</a></li>
         <li>Halaman <a href="/blog/">Blog</a></li>
+        <ul>
+            <li><a href="/blog/cerita"></a>HalamanCerita</li>
+            <li><a href="/blog/news"></a>Halaman News</li>
+        </ul>
     </ol>
 </body>
 </html>
