--- a/templates/index.html
+++ b/templates/index.html
@@ -4,19 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{{judul}}</title> <!-- Title HTML akan berubah otomatis karena views.py -->
+    <title>{{salam}} - {{judul}}</title> <!-- Title HTML akan berubah otomatis karena views.py -->
 </head>
 <body>
     <h1>Selamat datang..!!</h1>
     <p>Halaman web ini dibuat dengan menggunakan Framework Django</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima quasi, quidem nemo saepe vel dolorum unde, earum corrupti temporibus molestiae aperiam! Veritatis cum delectus fugit vel nobis. Molestiae, quos. Atque.</p>
     <!-- tanda '{{' '}}' merupakan sintaks Django untuk menaruh nilai variabel ke HTML -->
-    <p>Belajar web backend menggunakan Django di {{judul}}, bersama mentor yang friendly Pak {{mentor}}</p>
     <p>Ini halaman yang sudah saya buat</p>
-    <ol>
-        <li>Halaman <a href="/">Home</a></li>
-        <li>Halaman <a href="/blog/">Blog</a></li>
+    <ol> <!-- Membuat hyperlink menggunakan loop django-->
+        {# template Tags #}
+        {% for link, name in nav%}
+            <li>
+                <a href="{{link}}">{{name}}</a>
+            </li>
+        {% endfor %}
     </ol>
-    <p>Yang mau belajar tutorial pemrograman python kunjungi link dibawah ini</p>
+    <p>Belajar web backend menggunakan Django di {{judul}}, bersama mentor yang friendly Pak {{mentor}}.
+    Yang mau belajar tutorial pemrograman python kunjungi link dibawah ini.</p>
     <ul>
         <li>Channel  : <a href="https://www.youtube.com/c/KelasTerbuka">Kelas Terbuka</a></li>
         <li>Playlist : <a href="https://youtube.com/playlist?list=PLZS-MHyEIRo6p_RwsWntxMO5QAqIHHHld">Django Tutorial</a></li>
