--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,8 @@
     <title>{{judul}}</title>
 </head>
 <body>
-    <img style="width: 100%;" src="{% static 'img/banner_home.png' %}" alt="banner_home.png">
+    <!-- source image awalnya pakai alamat folder, diganti pakai variabel bernama banner -->
+    <img style="width: 100%;" src="{% static banner %}" alt="banner_home.png">
     <h1>{{subjudul}}</h1>
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequuntur, deserunt! Error, quis repellat numquam sit doloremque, ratione omnis, itaque totam nulla quae voluptatem neque? Odio iste repellat delectus earum quibusdam!</p>
     <ul>
