SUCCSESS. Semua apps pakai css static

--- a/about/templates/about/index.html
+++ b/about/templates/about/index.html
@@ -8,7 +8,7 @@
     <title>{{ judul }}</title>
 </head>
 <body>
-    <img style="width: 100%;" src="{% static 'about/img/banner_about.png' %}" alt="banner_about">
+    <img style="width: 100%;" src="{% static banner %}" alt="banner_about">
     <h1>{{ subjudul }}</h1>
     <p>
         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veritatis similique officia, vero nam minus voluptatum, at quos mollitia quod distinctio repellat esse. Nemo quia unde iusto dolorum accusamus nostrum incidunt.
