Skip dulu.. PUSING ! Tutorial sampai 20:51

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -30,3 +30,8 @@ nav a {
 nav a:hover {
     background-color: #f00;
 }
+
+.container-fluid {
+    background-image: url("/static/img/mainHeader.jpg");
+    background-position: center;
+}
